# Python_Sept25

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  anagrams.h  cmake_install.cmake  exercises.py  exercises_1.py  main.cpp  modular-sorting.h
Testing/Temporary/: CTestCostData.txt
array-stat/: ArrayStat.cpp  ArrayStat.h  CMakeLists.txt  README.md
array-stat/test/: CMakeLists.txt  parse.h  test_statarray.cpp  utils.h
googletest-subbuild/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
permutations/: README.md  a.out  main.cpp
permutations/test/: test_main.py
permutations/test/data/: test3.out  test4.out
table/: CMakeLists.txt  README.md  table.h
table/test/: CMakeLists.txt  unit_test.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_4417a30dc8.json  test_anagrams.cpp  testa[1]_include.cmake  testa[1]_tests.cmake  unit_test.cpp
test/data/: long.in  long.out
unique-strings/: README.md  a.out  main.cpp
unique-strings/test/: test_main.py
